--- a/eas.json
+++ b/eas.json
@@ -3,8 +3,12 @@
     "version": ">= 7.0.0"
   },
   "build": {
+    "apk": {
+      "android": {
+        "buildType": "apk"
+      }
+    },
     "preview": {
-      "distribution": "internal",
       "android": {
         "buildType": "apk"
       }
