Fix Expo owner, new EAS projectId and prepare CI build

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "firebase": "^12.7.0",
     "firebase-admin": "^13.6.0",
     "helmet": "^8.1.0",
-    "openai": "^6.15.0"
+    "openai": "^6.15.0",
+    "react": "19.1.0",
+    "react-native": "0.81.5"
   },
   "description": "This is an [Expo](https://expo.dev) project created with [`create-expo-app`](https://www.npmjs.com/package/create-expo-app).",
   "repository": {
