--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -17,11 +17,10 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 18
-          cache: npm
+          node-version: 20
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install --legacy-peer-deps
 
       - name: Install Expo & EAS CLI
         run: npm install -g expo-cli eas-cli
